# NER-Extraction

./: .gitignore  CMakeLists.txt  README.md  create_training_data.py  create_weights.py  libner.dylib  python_ner.py  requirements.txt  setup.py  test_init.py  test_ner.py  test_spacy_ner.py  test_stanza_ner.py  test_travel.py  test_travel_ner.py  test_weights.py  train_and_update.py  travel_bot.py  travel_ner_colab.py
benchmarks/: benchmark_ner.py
cache/maps_data/: landmarks_in_Bangalore_Bangalore__India_landmark.json  landmarks_in_Mumbai_Mumbai__India_landmark.json  landmarks_in_Varanasi_Varanasi__India_landmark.json  temples_in_Agra_Agra__India_hindu_temple.json  temples_in_Bangalore_Bangalore__India_hindu_temple.json  temples_in_Chennai_Chennai__India_hindu_temple.json  temples_in_Delhi_Delhi__India_hindu_temple.json  temples_in_Goa_Goa__India_hindu_temple.json  temples_in_Jaipur_Jaipur__India_hindu_temple.json  temples_in_Kerala_Kerala__India_hindu_temple.json  temples_in_Kolkata_Kolkata__India_hindu_temple.json  temples_in_Mumbai_Mumbai__India_hindu_temple.json  temples_in_Varanasi_Varanasi__India_hindu_temple.json  tourist_attractions_in_Agra_Agra__India_tourist_attraction.json  tourist_attractions_in_Bangalore_Bangalore__India_tourist_attraction.json  tourist_attractions_in_Chennai_Chennai__India_tourist_attraction.json  (+7 more)
data/: india_locations.json
model/: vocab.npz  weights.npz
src/: __init__.py  data_generator.py  fast_ner.py  india_travel_data.py  maps_data_fetcher.py  ner.c  ner.h  vocabulary.py
